--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,6 +1,15 @@
 .profile-dropdown {
   position: absolute;
-  top: 50px;
+  background: white;
+  border: gray solid 1px;
+  padding: 15px;
+  box-shadow: -1px 4px 6px 1px rgba(0, 0, 0, 0.09);
+  font-family: Arial;
+  color: black;
+  width: 915px;
+  height: 460px;
+  top: 25px;
+  right: 0px;
 }
 
 #nav-logo {
@@ -16,7 +25,7 @@
   align-items: center;
   justify-content: space-between;
   margin: 0px 10px;
-  border-bottom: 1px solid lightgray;
+  /* border-bottom: 1px solid lightgray; */
 }
 
 #nav-container li {
@@ -50,4 +59,33 @@
   display: flex;
   align-items: center;
   column-gap: 10px;
+}
+
+#login-link-button:hover {
+  color: #05ce78;
+}
+
+#discover-link:hover {
+  color: #05ce78;
+}
+
+#start-a-project:hover {
+  color: #05ce78;
+}
+
+#user-dropdown-button {
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 0.9rem;
+}
+
+#user-dropdown-button:hover {
+  color: #05ce78;
+}
+
+#user-dropdown-container {
+  background-color: white;
+  padding: 10px;
+  border: 1px solid lightgray;
 }
