added footer nav and css updates

--- a/react-app/src/components/ProjectFeatured/ProjectFeatured.css
+++ b/react-app/src/components/ProjectFeatured/ProjectFeatured.css
@@ -16,7 +16,7 @@
   padding-right: 60px;
   margin-top: 20px;
   row-gap: 10px;
-  border-right: 1px solid lightgray;;
+  border-right: 1px solid lightgray;
 }
 
 .featured-project-container {
