--- a/react-app/src/components/SignupFormPage/SignupForm.css
+++ b/react-app/src/components/SignupFormPage/SignupForm.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   margin: 0px auto;
+  border-top: 1px solid lightgray;
+  background-color: #f3f3f3;
 }
 
 #signup-form-container {
