--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -7,7 +7,7 @@
   font-family: Arial;
   color: black;
   width: 915px;
-  height: 460px;
+  height: 365px;
   top: 25px;
   right: 0px;
 }
@@ -87,4 +87,20 @@
   background-color: white;
   padding: 10px;
   border: 1px solid lightgray;
+}
+
+.main-profile-container {
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+  column-gap: 90px;
+}
+
+.profile-container {
+  width: 210px;
+}
+
+.profile-backed-projects-container,
+.profile-creator-projects-container {
+  width: 350px;
 }
