--- a/react-app/src/components/ProjectForm/ProjectForm.css
+++ b/react-app/src/components/ProjectForm/ProjectForm.css
@@ -9,3 +9,100 @@
   background-color: white;
   margin: auto;
 }
+
+.form-button-nav-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid lightgray;
+  padding-top: 15px;
+  margin-top: 15px;
+}
+
+.project-form-header {
+  font-weight: 400;
+  font-size: 1.8rem;
+}
+
+.project-form-explanation {
+  color: gray;
+  font-weight: lighter;
+  font-size: 1rem;
+}
+
+.project-form-categories {
+  margin: 10px;
+  margin-bottom: 3rem;
+  padding: 10px 8px;
+  border: 1px solid lightgray;
+  width: 100%;
+}
+
+.project-form-labels {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0px;
+  row-gap: 5px;
+}
+
+.form-date-inputs {
+  width: 165px;
+  height: 35px;
+  text-align: center;
+}
+
+.form-funds-input {
+  height: 35px;
+  padding: 10px;
+  font-size: 0.9rem;
+}
+
+.form-greeting {
+  color: gray;
+}
+
+.project-dates-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-text-inputs {
+  height: 35px;
+  padding: 10px;
+  font-size: 0.9rem;
+}
+
+.form-date-inputs {
+  width: 100%;
+  padding: 12px;
+  padding-top: 16px;
+  border-radius: 4px;
+  border: 1px solid lightgray;
+  margin: 7px;
+}
+
+.form-back-page-button {
+  padding: 10px;
+  font-size: 14px;
+  border: none;
+  background-color: white;
+  cursor: pointer;
+}
+
+.form-next-page-button {
+  display: block;
+  cursor: pointer;
+  color: white;
+  background-color: #464646;
+  padding: 10px;
+  font-size: 14px;
+  border-style: none;
+  text-align: center;
+  width: 45%;
+  margin-top: 5px;
+}
+
+.form-next-page-button:disabled {
+  background-color: lightgray;
+  cursor: not-allowed;
+}
