--- a/react-app/src/components/UserSummaryPage/UserSummaryPage.css
+++ b/react-app/src/components/UserSummaryPage/UserSummaryPage.css
@@ -1,4 +1,54 @@
 #main-user-summary-container {
   padding: 10px;
   border-top: 1px solid lightgray;
+  background-color: #f3f3f3;
+}
+
+#user-summary-container {
+  padding: 0px 50px;
+  margin: 0px auto;
+  width: 1000px;
+}
+
+.users-created-header,
+.users-backed-header,
+.users-saved-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.users-created-list-container,
+.users-backed-list-container,
+.users-saved-list-container {
+  background-color: white;
+  padding: 10px 20px;
+}
+
+.users-created-list,
+.users-backed-list,
+.users-saved-list {
+  padding-left: 0px;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+}
+
+.the-project-info-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.project-info-container {
+  display: flex;
+  column-gap: 10px;
+  width: 280px;
+}
+
+.created-projects-buttons-container {
+  display: flex;
+  align-items: center;
+  column-gap: 25px;
 }
