--- a/react-app/src/components/UserSummaryPage/UserSummaryPage.css
+++ b/react-app/src/components/UserSummaryPage/UserSummaryPage.css
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: 1.3rem;
 }
 
 .users-created-list-container,
@@ -39,12 +40,37 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 10px;
+  /* border-bottom: 1px solid lightgray;
+  border-top: 1px solid lightgray; */
 }
 
 .project-info-container {
   display: flex;
   column-gap: 10px;
   width: 280px;
+}
+
+.total-funds {
+  font-size: 1.5rem
+}
+
+.section-description {
+  font-size: 1.4rem;
+  font-weight: lighter;
+  padding: 10px;
+  margin-bottom: 21px;
+}
+
+.users-created-labels {
+  display: flex;
+  justify-content: space-around;
+  margin: 10px 0px;
+}
+
+.created-labels {
+  font-size: 1.1rem;
+  font-weight: bold;
 }
 
 .created-projects-buttons-container {
