--- a/react-app/src/components/LoginFormPage/LoginForm.css
+++ b/react-app/src/components/LoginFormPage/LoginForm.css
@@ -53,6 +53,10 @@
   cursor: pointer;
 }
 
+.demo-button:hover {
+  background-color: rgb(140, 9, 9);
+}
+
 .errors-list {
   width: 100%;
   list-style-type: none;
