--- a/react-app/src/components/ProfileProjects/ProfileProjects.css
+++ b/react-app/src/components/ProfileProjects/ProfileProjects.css
@@ -6,3 +6,34 @@
 
   column-gap: 10px;
 }
+
+.profile-new-link-div {
+  display: flex;
+  column-gap: 5px;
+  align-items: center;
+  transition: 0.5s;
+  background-image: linear-gradient(to right, transparent 52%, blue 48%);
+  background-size: 200%;
+  color: #3b5ffc;
+  p {
+    color: black;
+    margin: 0px;
+  }
+}
+
+.profile-new-link-div:hover {
+  color: white;
+  background-image: linear-gradient(to right, transparent 50%, blue 50%);
+  background-position: -90%;
+  p {
+    color: white;
+    margin: 0px;
+  }
+}
+
+/* .new-project-animation {
+  transition: all 0.3s;
+  background-image: linear-gradient(to right, transparent 51%, #003BFF 49%);
+  background-position: 0 0;
+  background-size: 200%;
+} */
