--- a/react-app/src/components/SingleProjectShow/SingleProjectShow.css
+++ b/react-app/src/components/SingleProjectShow/SingleProjectShow.css
@@ -102,6 +102,16 @@
   cursor: pointer;
 }
 
+.back-this-button:disabled {
+  background-color: #64877b;
+  cursor: not-allowed;
+}
+
+.back-this-button:disabled:hover {
+  background-color: #64877b;
+  cursor: not-allowed;
+}
+
 .back-this-button:hover,
 .mini-back-this-button:hover {
   background-color: #015738;
@@ -164,17 +174,17 @@
   font-size: 0.9rem;
   border: 1px solid lightgray;
   background-color: white;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
-.save-project-rectangle-button:hover {
+/* .save-project-rectangle-button:hover {
   border: 1px solid black;
-}
+} */
 
 .mini-save-project-rectangle-button {
   background-color: white;
   border: none;
-  cursor: pointer;
+  /* cursor: pointer; */
   font-size: 1rem;
 }
 
@@ -194,4 +204,36 @@
 .creator-username {
   font-size: 1.5rem;
   font-weight: bold;
+}
+
+
+.pledge-amount-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.pledge-button {
+  color: white;
+  margin-top: 10px;
+  padding: 8px;
+  background-color: #028858;
+  border: none;
+  cursor: pointer;
+}
+
+.pledge-button:disabled {
+  background-color: #64877b;
+  cursor: not-allowed;
+}
+
+.single-project-edit-button {
+  padding: 10px;
+  background-color: #028858;
+  color: white;
+  border: none;
+}
+
+.single-project-edit-button:hover {
+  background-color: #015738;
+  border-color: #015738;
 }
