added discovry and category pages

--- a/react-app/src/components/CategoryNav/CategoryNav.css
+++ b/react-app/src/components/CategoryNav/CategoryNav.css
@@ -14,7 +14,7 @@
   line-height: 2.4rem;
 }
 
-/* #category-nav-container a:hover {
+#category-nav-container a:hover {
   color: #034752;
   text-decoration: underline;
-} */
+}
