--- a/react-app/src/components/SingleProjectShow/SingleProjectShow.css
+++ b/react-app/src/components/SingleProjectShow/SingleProjectShow.css
@@ -141,10 +141,23 @@
   column-gap: 10px;
 }
 
-.dropdown-story,
-.dropdown-faq {
+#dropdown-story,
+#dropdown-faq {
   font-size: 1.4rem;
   margin: 0px 18px;
+  cursor: pointer;
+}
+
+#dropdown-story:hover,
+#dropdown-faq:hover {
+  color: #009E74;
+}
+
+
+.button-active {
+  color: #009E74;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 .dropdown-information-container {
