--- a/react-app/src/components/FooterNav/FooterNav.css
+++ b/react-app/src/components/FooterNav/FooterNav.css
@@ -5,7 +5,7 @@
   padding: 10px 90px;
   border-bottom: 1px solid lightgray;
   border-top: 1px solid lightgray;
-  position: fixed;
+  /* position: fixed; */
   left: 0;
   bottom: 0;
   width: 100%;
