--- a/react-app/src/components/RewardsShow/RewardsShow.css
+++ b/react-app/src/components/RewardsShow/RewardsShow.css
@@ -28,6 +28,10 @@
   border: none;
 }
 
+.single-project-rewards-container {
+  max-width: 250px;
+}
+
 .main-single-rewards-container {
   display: flex;
   flex-direction: column;
