added initial like functionality

--- a/react-app/src/components/ProjectFeatured/ProjectFeatured.css
+++ b/react-app/src/components/ProjectFeatured/ProjectFeatured.css
@@ -35,8 +35,8 @@
   cursor: pointer;
 }
 
-.save-project-button:hover {
+/* .save-project-button:hover {
   width: 30px;
   height: 30px;
 
-}
+} */
