--- a/react-app/src/components/RecommendedProjects/RecommendedProjects.css
+++ b/react-app/src/components/RecommendedProjects/RecommendedProjects.css
@@ -14,3 +14,26 @@
   color: rgb(98, 97, 97);
   font-weight: lighter;
 }
+
+.chevron-buttons {
+  border: 1px solid transparent;
+  background-color: white;
+  color: blue;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.chevron-buttons:hover {
+  border: 1px solid blue;
+  border-radius: 10px;
+}
+
+.chevron-buttons:disabled {
+  border: 1px solid transparent;
+  background-color: white;
+  color: rgb(118, 118, 118);
+}
+
+.active {
+  text-decoration: underline;
+}
