--- a/react-app/src/components/ProjectForm/ProjectForm.css
+++ b/react-app/src/components/ProjectForm/ProjectForm.css
@@ -106,3 +106,9 @@
   background-color: lightgray;
   cursor: not-allowed;
 }
+
+.current-project-image-container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
