--- a/react-app/src/components/SingleProjectShow/SingleProjectShow.css
+++ b/react-app/src/components/SingleProjectShow/SingleProjectShow.css
@@ -187,7 +187,7 @@
   font-size: 0.9rem;
   border: 1px solid lightgray;
   background-color: white;
-  /* cursor: pointer; */
+  cursor: pointer;
 }
 
 /* .save-project-rectangle-button:hover {
@@ -197,7 +197,7 @@
 .mini-save-project-rectangle-button {
   background-color: white;
   border: none;
-  /* cursor: pointer; */
+  cursor: pointer;
   font-size: 1rem;
 }
 
