--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -8,8 +8,8 @@
   color: black;
   width: 915px;
   height: 365px;
-  top: 45px;
-  right: 0px;
+  top: 55px;
+  right: 20px;
 }
 
 #nav-logo {
@@ -118,6 +118,10 @@
   width: 350px;
 }
 
+.no-border-right {
+  border: none !important;
+}
+
 .backing-projects-list {
   display: flex;
   flex-direction: column;
@@ -143,11 +147,69 @@
   margin-top: 20px;
 }
 
-.project-summary-link > a:hover {
+.project-summary-link>a:hover {
   color: #05ce78 !important;
 }
 
 .backing-container:hover {
   color: #034752 !important;
   text-decoration: underline !important;
+}
+
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  background-color: transparent;
+  z-index: 1000;
+}
+
+/* CSS for the search input container */
+.search-container {
+  background-color: transparent;
+  padding: 0;
+  border: none;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+/* CSS for the search input itself */
+.search-input {
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-size: 27px;
+  padding: 20px;
+}
+
+.search-button {
+  border: none;
+  background-color: white;
+  font-size: 26px;
+  margin-right: 30px;
+  cursor: pointer;
+}
+
+/* CSS for the modal content */
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  max-width: 100%;
+  /* Full width */
+}
+
+.close-button {
+  /* position: absolute;
+  top: 10px;
+  right: 10px; */
+  cursor: pointer;
+  font-size: 3rem;
+  color: #037362;
 }
