--- a/react-app/src/components/ProjectShowContainer/ProjectShowContainer.css
+++ b/react-app/src/components/ProjectShowContainer/ProjectShowContainer.css
@@ -5,3 +5,62 @@
   justify-content: center;
   height: 600px;
 }
+
+/* Loading Spinner */
+.loader {
+  margin-left: auto;
+  margin-right: auto;
+  height: 500px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 11rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.loader:before,
+.loader:after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  animation: pulsOut 1.8s ease-in-out infinite;
+  filter: drop-shadow(0 0 1rem rgba(128, 128, 128, 0.75)); /* Subtle gray color */
+}
+
+.loader:before {
+  width: 100%;
+  padding-bottom: 100%;
+  box-shadow: inset 0 0 0 1rem rgba(128, 128, 128, 0.2); /* Subtle gray color */
+  animation-name: pulsIn;
+}
+
+.loader:after {
+  width: calc(100% - 2rem);
+  padding-bottom: calc(100% - 2rem);
+  box-shadow: 0 0 0 0 rgba(128, 128, 128, 0.2); /* Subtle gray color */
+}
+
+@keyframes pulsIn {
+  0% {
+    box-shadow: inset 0 0 0 1rem rgba(128, 128, 128, 0.2); /* Subtle gray color */
+    opacity: 1;
+  }
+  50%, 100% {
+    box-shadow: inset 0 0 0 0 rgba(128, 128, 128, 0.2); /* Subtle gray color */
+    opacity: 0;
+  }
+}
+
+@keyframes pulsOut {
+  0%, 50% {
+    box-shadow: 0 0 0 0 rgba(128, 128, 128, 0.2); /* Subtle gray color */
+    opacity: 0;
+  }
+  100% {
+    box-shadow: 0 0 0 1rem rgba(128, 128, 128, 0.2); /* Subtle gray color */
+    opacity: 1;
+  }
+}
