--- a/react-app/src/components/CategoryPage/CategoryPage.css
+++ b/react-app/src/components/CategoryPage/CategoryPage.css
@@ -1,6 +1,13 @@
 .projects-category-div {
-  width: 1296px;
+  width: 100%;
   margin: 0px auto;
-  padding-left: 30px;
-  margin-top: 30px;
+  margin-top: 10px;
+  text-align: center;
+  padding-inline: 10px;
+}
+
+@media (min-width: 800px) {
+  .projects-category-div {
+    margin-top: 30px;
+  }
 }
