--- a/react-app/src/components/ProjectForm/ProjectForm.css
+++ b/react-app/src/components/ProjectForm/ProjectForm.css
@@ -11,6 +11,7 @@
 }
 
 .form-button-nav-container {
+  padding-inline: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -35,13 +36,13 @@
   margin-bottom: 3rem;
   padding: 10px 8px;
   border: 1px solid lightgray;
-  width: 100%;
+  width: 90%;
 }
 
 .project-form-labels {
   display: flex;
   flex-direction: column;
-  padding: 10px 0px;
+  padding: 10px;
   row-gap: 5px;
 }
 
@@ -107,8 +108,17 @@
   cursor: not-allowed;
 }
 
+#project-image-input {
+  height: 100%;
+}
+
 .current-project-image-container {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
+  align-items: center;
+}
+
+.remove-image-button {
+  width: 50%;
 }
