--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,4 +1,8 @@
 /* TODO Add site wide styles */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   box-sizing: border-box;
   font-family: 'Arimo', sans-serif;
