--- a/react-app/src/components/UserSummaryPage/UserSummaryPage.css
+++ b/react-app/src/components/UserSummaryPage/UserSummaryPage.css
@@ -5,9 +5,12 @@
 }
 
 #user-summary-container {
-  padding: 0px 50px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
   margin: 0px auto;
-  width: 1000px;
+  width: 100%;
+  max-width: 1000px;
 }
 
 .users-created-header,
@@ -46,6 +49,11 @@
   border-top: 1px solid lightgray; */
 }
 
+.project-info-funded-container {
+  display: flex;
+  justify-content: space-between;
+}
+
 .project-info-container {
   display: flex;
   column-gap: 10px;
@@ -61,7 +69,7 @@
 }
 
 .total-funds {
-  font-size: 1.5rem
+  font-size: 1rem;
 }
 
 .section-description {
@@ -89,11 +97,9 @@
 }
 
 .creator-edit-buttons {
-  padding: 10px;
-  background-color: #028858;
   color: white;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 15px;
 }
 
 .creator-edit-buttons:hover {
@@ -134,4 +140,24 @@
 
 .backing-rewards {
   margin-right: 75px;
+}
+
+@media (max-width: 400px) {
+  .project-info-funded-container {
+    flex-direction: column;
+    width: 100%;
+  }
+}
+
+@media (min-width: 640px) {
+  .total-funds {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 999px) {
+  .the-project-info-container {
+    flex-direction: column;
+    row-gap: 10px;
+  }
 }
