--- a/react-app/src/components/SingleProjectShow/SingleProjectShow.css
+++ b/react-app/src/components/SingleProjectShow/SingleProjectShow.css
@@ -40,6 +40,7 @@
 .single-project-image-box > img {
   /* max-width: 589.66px; */
   width: 100%;
+  max-height: 439px;
 }
 
 .other-details-list {
@@ -277,6 +278,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 20px;
+    align-items: center;
   }
 }
 
